Bye console.logs, each child warn fix, collection view on mobile enhanced

--- a/src/Views/Collection/Components/CollectionNfts/styles.module.scss
+++ b/src/Views/Collection/Components/CollectionNfts/styles.module.scss
@@ -39,7 +39,7 @@
       .cardNft {
         overflow: visible;
         position: relative;
-        height: 400px;
+        height: 380px;
         width: 180px;
         display: flex;
         flex-direction: column;
